syntax = "proto3";

option go_package = "edm-entities-approval-rules-presentation-abstractions-internals";

package Edm.Entities.Approval.Rules.Presentation.Abstractions.Internals;

option csharp_namespace = "Edm.Entities.Approval.Rules.Presentation.Abstractions.Internals";

import "Grpc/Contracts/Rules/Keys/approval_rule_key.proto";

import "Grpc/Services/Internals/Groups/Contracts/Groups/approval_group.proto";
import "Grpc/Contracts/EntitiesTypes/Attributes/entity_type_attribute.proto";

message GetApprovalGroupsQuery {
  ApprovalRuleKeyDto approval_rule_key = 1;
  string group_id = 2;
}

message GetApprovalGroupsQueryResponse {
  ApprovalGroupDto group = 1;
  repeated EntityTypeAttributeDto attributes = 2;
  string concurrency_token = 3;
}
